--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = hbrl
-version = 0.0.3post1
+version = 0.0.10
 author = Hedwin BONNAVAUD
 author_email = hbonnavaud@gmail.com
 description = Library to do reinforcement learning in an easy to use way.
